src/objects/Supplier_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Supplier Details</relationshipLabel>
        <relationshipName>Supplier_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Conversion_ID__c</fullName>
        <externalId>true</externalId>
        <label>Conversion ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Customer_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Customer ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Supplier Details (Supplier)</relationshipLabel>
        <relationshipName>Supplier_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent_Account__c</fullName>
        <formula>Supplier__r.Ultimate_Parent_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ultimate Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Way_of_Delivery__c</fullName>
        <label>Way of Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Routesales</fullName>
                </value>
                <value>
                    <fullName>Self pick up</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>LSP</fullName>
                </value>
                <value>
                    <fullName>Operator</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Caterer</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Cash &amp; Carry</fullName>
                </value>
                <value>
                    <fullName>Special delivery</fullName>
                </value>
                <value>
                    <fullName>Office Supplier</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                    <isActive>false</isActive>
                    <label>Office</label>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                    <isActive>false</isActive>
                    <label>Supplier</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Supplier Detail</label>
    <nameField>
        <displayFormat>SD{0000000000}</displayFormat>
        <label>Supplier Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>